Add cuda and gpu support

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the device to GPU if available, otherwise CPU\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +73,12 @@
     "        return out, hidden\n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
-    "        return torch.zeros(num_layers, batch_size, hidden_size)"
+    "        return torch.zeros(num_layers, batch_size, hidden_size).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +87,7 @@
     "    print(\"Started training\")\n",
     "    for epoch in range(1, num_epochs + 1):\n",
     "        for inputs, targets in dataloader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)  # Move data to the device\n",
     "            optimizer.zero_grad()\n",
     "\n",
     "            # Initialize hidden state with the correct batch size\n",
@@ -97,7 +108,7 @@
     "def generate_text(model, generation_length, temperature=1.0):\n",
     "    model.eval()\n",
     "    generated_text = \"\"\n",
-    "    input_seq = torch.randint(0, vocab_size, (1, 1), dtype=torch.long)  # Random start\n",
+    "    input_seq = torch.randint(0, vocab_size, (1, 1), dtype=torch.long).to(device)  # Random start\n",
     "    hidden = model.init_hidden(1)\n",
     "    \n",
     "    for _ in range(generation_length):\n",
@@ -107,14 +118,14 @@
     "            next_char_idx = torch.multinomial(output[0, -1], 1).item()\n",
     "            next_char = idx2char[next_char_idx]\n",
     "            generated_text += next_char\n",
-    "            input_seq = torch.tensor([[next_char_idx]], dtype=torch.long)\n",
+    "            input_seq = torch.tensor([[next_char_idx]], dtype=torch.long).to(device)\n",
     "    \n",
-    "    return generated_text\n"
+    "    return generated_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,25 +133,7 @@
      "output_type": "stream",
      "text": [
       "Started training\n",
-      "Epoch 1/50, Loss: 1.0259023904800415\n",
-      "Epoch 2/50, Loss: 0.9725892543792725\n",
-      "Epoch 3/50, Loss: 1.050489068031311\n",
-      "Epoch 4/50, Loss: 0.9627208709716797\n",
-      "Epoch 5/50, Loss: 0.9831687211990356\n",
-      "Generated text after 5 epochs:\n",
-      "t mexico, that's going infurliet grave in a free campaign. our room of rape. i can't ancil on television from cash nations, who has always go to 25 topgorking, corciance are great people. we have the infrastructurian republic security. it's dropping it. she's supposed to have a vote focuses from common sense and all of them. remember that guy? why goland, which\" tower than any happened? while millions. who’s getting one people say that we work. you want to take care of it, folks. trump: it was i\n",
-      "\n",
-      "Epoch 6/50, Loss: 0.9773758053779602\n",
-      "Epoch 7/50, Loss: 1.0389347076416016\n",
-      "Epoch 8/50, Loss: 1.000198245048523\n",
-      "Epoch 9/50, Loss: 1.0306917428970337\n",
-      "Epoch 10/50, Loss: 1.0068590641021729\n",
-      "Generated text after 10 epochs:\n",
-      ", don't use it. so i said why do we say. above your time. she even moving in the mile. so thanks, 33,000 support. you don’t like it. but you know, if they did a little bit in our military penny… he was a beauty repeal. that's ups wisleds that got rid of him a lot of people because they have it out for them. i will be in france, folks, but i could didn't even know what happened. thanks to my office. look, if i've rich again. we will make america subpoenal wrong. we're saver. we have angrant skyon\n",
-      "\n",
-      "Epoch 11/50, Loss: 1.0074678659439087\n",
-      "Epoch 12/50, Loss: 0.9815259575843811\n",
-      "Epoch 13/50, Loss: 1.0085705518722534\n"
+      "Epoch 1/50, Loss: 1.0113270282745361\n"
      ]
     }
    ],
@@ -167,18 +160,25 @@
     "idx2char = dataset.idx2char\n",
     "\n",
     "# Initialize the model, loss function, and optimizer\n",
-    "model = RNNModel(vocab_size, embed_size, hidden_size, num_layers)\n",
+    "model = RNNModel(vocab_size, embed_size, hidden_size, num_layers).to(device)  # Move model to device\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
     "# Train the model and generate text in a loop\n",
-    "train_and_generate(model, dataloader, criterion, optimizer, num_epochs, generation_length, generate_every_n_epochs)\n"
+    "train_and_generate(model, dataloader, criterion, optimizer, num_epochs, generation_length, generate_every_n_epochs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
