--- a/llama.ipynb
+++ b/llama.ipynb
@@ -17,7 +17,29 @@
    "source": [
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, TrainingArguments, Trainer, DataCollatorForLanguageModeling\n",
-    "from datasets import Dataset"
+    "from datasets import Dataset\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -94,7 +116,7 @@
    "source": [
     "# Load the model and tokenizer\n",
     "model_name = \"meta-llama/Meta-Llama-3.1-8B\"\n",
-    "access_token = \"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\"\n",
+    "access_token = os.environ.get('ACCESS_TOKEN')\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModelForCausalLM.from_pretrained(model_name, token=access_token).to(device)"
    ]
