Add model.eval() and model.train()

--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -101,8 +101,10 @@
     "        print(f'Epoch {epoch}/{num_epochs}, Loss: {loss.item()}')\n",
     "        \n",
     "        if epoch % generate_every_n_epochs == 0:\n",
+    "            model.eval()\n",
     "            generated_text = generate_text(model, generation_length)\n",
     "            print(f\"Generated text after {epoch} epochs:\\n{generated_text}\\n\")\n",
+    "            model.train()\n",
     "\n",
     "def generate_text(model, generation_length, temperature=0.5):\n",
     "    model.eval()\n",
