--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "879b3b75-a974-4a87-bd12-d1216dfce30c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-09-03 22:33:51.326758: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-09-03 22:33:51.371686: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX512F AVX512_VNNI, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.25.2\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "torch.cuda.empty_cache()\n",
@@ -40,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "21007720-aa66-47ec-85a7-0e6b90cc665b",
    "metadata": {},
    "outputs": [],
@@ -60,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "a720f265-63b8-40a9-8e2f-bb54d3081d35",
    "metadata": {},
    "outputs": [],
@@ -82,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "7b96b75f-1538-4e25-a390-ca8592bcf457",
    "metadata": {},
    "outputs": [],
@@ -106,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "0673f108-e4b7-4366-9ca3-389084183c61",
    "metadata": {},
    "outputs": [],
@@ -133,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "b7c239d1-f21f-403e-ae58-3050e96a61bd",
    "metadata": {},
    "outputs": [],
@@ -185,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "50ff08fd-1be5-405b-bb02-f2bc774d96d9",
    "metadata": {},
    "outputs": [
@@ -234,10 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5a46842a-a34d-4ebd-9449-ed0021706ea3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (1022810 > 1024). Running this sequence through the model will result in indexing errors\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 7990 examples.\n"
+     ]
+    }
+   ],
    "source": [
     "file_path = \"trump_speeches_combined_processed.txt\"\n",
     "block_size = 128\n",
@@ -250,14 +253,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9d22b124-0b62-4b0a-8562-3e0139ec767d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.local/lib/python3.10/site-packages/transformers/training_args.py:1525: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Training setup\n",
-    "total_epochs = 1000\n",
-    "save_epochs = 10\n",
+    "total_epochs = 1\n",
+    "save_epochs = 1\n",
     "\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./results\",\n",
@@ -293,10 +305,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "bddb706c-e3de-4932-8718-5b2c9756a0ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting training...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='224' max='224' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [224/224 01:07, Epoch 0/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>3.096000</td>\n",
+       "      <td>2.967203</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Callback triggered for epoch 0\n",
+      "Attempting to save checkpoint for epoch 0 to ./results/checkpoint-epoch-0\n",
+      "Saved checkpoint for epoch 0 to ./results/checkpoint-epoch-0\n",
+      "Training completed\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the model\n",
     "print(\"Starting training...\")\n",
@@ -306,10 +369,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "476318d1-efdf-4855-bd73-75da1959c887",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved final checkpoint to ./results/final-checkpoint\n"
+     ]
+    }
+   ],
    "source": [
     "# Manually save the final state if needed\n",
     "final_checkpoint_dir = os.path.join(training_args.output_dir, \"final-checkpoint\")\n",
@@ -320,15 +391,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7dbdd89d-0f46-4900-b863-f8e39335390c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generated text after epoch 1:\n",
+      "You might think you've heard of the phrase \"the right way to do things.\" In fact, it is the opposite of that. What happens if you get stuck in the wrong way? The common sense advice is to stay in a certain way and use whatever you can to get the job done, and that's what the right-to-work (RTW) movement is all about.\n",
+      "\n",
+      "I recently came across a video of a group of people in Detroit, Michigan, working with\n",
+      "\n",
+      "Generated text with prompt after epoch 1:\n",
+      "Prompt: What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\n",
+      "Response: What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\n",
+      "\n",
+      "I think Kamal would be a better president. I think that she'd be better.\n",
+      ".\n",
+      "Final Validation Perplexity: 19.44\n",
+      "\n",
+      "Final generated text:\n",
+      "- your mom has been a mother for over 20 years. - i'm not going to tell you why she's been so successful in this campaign.\n",
+      "she's had a tremendous support and she understands that. but if she gets a little bit of the support of other people, they will say, \"okay, don’t tell that to her. \" and they are going, you know, we‖ve got to get her support. i don´t know what that\n",
+      "\n",
+      "Final generated text with prompt:\n",
+      "Prompt: What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\n",
+      "Response: What are your thoughts on Kamala Harris running as president against you, do you think she'll win? i'd say yes. she's a really strong person, and i think we'll have a great relationship. i don't think i'll ever be able to do that. but she should be president. you know that, right? you should know it. this is what we're doing, we are running a campaign of opportunity, a team of people that believe in what the people are going to need for the future of america. we have to build on the tremendous success of our nation's success, which is going into obama's administration. and if you look at our country, you have the same people, the opposite sex, that are the best people i've ever met, i have them all, they are great people.\n",
+      "you have great leadership. they're great, very, extremely qualified people with very great things to say. a lot of things that we don’t have. the other thing i said is i want to go back to my days as a member\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = \"What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\"\n",
     "\n",
     "for epoch in range(save_epochs, total_epochs + 1, save_epochs):\n",
-    "    checkpoint_dir = f\"./results/checkpoint-epoch-{epoch}\"\n",
+    "    checkpoint_dir = f\"./results/checkpoint-epoch-{epoch-1}\"\n",
     "    if os.path.exists(checkpoint_dir):\n",
     "        loaded_model = GPT2LMHeadModel.from_pretrained(checkpoint_dir)\n",
     "        loaded_model = get_peft_model(loaded_model, peft_config)\n",
@@ -357,10 +457,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d519b847-df0a-4bb2-a44d-eefb7d32d4b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final model saved to ./fine_tuned_gpt2_final\n"
+     ]
+    }
+   ],
    "source": [
     "final_output_dir = \"./fine_tuned_gpt2_final\"\n",
     "trainer.save_model(final_output_dir)\n",
