Update gpt2 implementation

--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "879b3b75-a974-4a87-bd12-d1216dfce30c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "21007720-aa66-47ec-85a7-0e6b90cc665b",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "a720f265-63b8-40a9-8e2f-bb54d3081d35",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "7b96b75f-1538-4e25-a390-ca8592bcf457",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "0673f108-e4b7-4366-9ca3-389084183c61",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "b7c239d1-f21f-403e-ae58-3050e96a61bd",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "50ff08fd-1be5-405b-bb02-f2bc774d96d9",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "5a46842a-a34d-4ebd-9449-ed0021706ea3",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "9d22b124-0b62-4b0a-8562-3e0139ec767d",
    "metadata": {},
    "outputs": [
@@ -268,8 +268,8 @@
    ],
    "source": [
     "# Training setup\n",
-    "total_epochs = 1\n",
-    "save_epochs = 1\n",
+    "total_epochs = 1000\n",
+    "save_epochs = 10\n",
     "\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./results\",\n",
@@ -305,61 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "bddb706c-e3de-4932-8718-5b2c9756a0ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting training...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='224' max='224' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [224/224 01:07, Epoch 0/1]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>3.096000</td>\n",
-       "      <td>2.967203</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Callback triggered for epoch 0\n",
-      "Attempting to save checkpoint for epoch 0 to ./results/checkpoint-epoch-0\n",
-      "Saved checkpoint for epoch 0 to ./results/checkpoint-epoch-0\n",
-      "Training completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the model\n",
     "print(\"Starting training...\")\n",
@@ -369,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "476318d1-efdf-4855-bd73-75da1959c887",
    "metadata": {},
    "outputs": [
@@ -391,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "7dbdd89d-0f46-4900-b863-f8e39335390c",
    "metadata": {},
    "outputs": [
@@ -400,35 +349,128 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Generated text after epoch 1:\n",
-      "You might think you've heard of the phrase \"the right way to do things.\" In fact, it is the opposite of that. What happens if you get stuck in the wrong way? The common sense advice is to stay in a certain way and use whatever you can to get the job done, and that's what the right-to-work (RTW) movement is all about.\n",
+      "Generated text after epoch 100:\n",
+      ", the latest on the rise of anti-immigration sentiment. (Peter Stevenson/The Washington Post)\n",
       "\n",
-      "I recently came across a video of a group of people in Detroit, Michigan, working with\n",
+      "In a statement released Monday, Trump's campaign announced that it had hired an outside lawyer to assist the campaign and that its senior staff was \"working on legal issues,\" with the final deadline to hire an attorney by July 14.\n",
+      "- 'It's not the government that's paying attention to the president's tweets,' says former GOP strategist\n",
+      ", former Trump campaign adviser, and Trump loyal\n",
       "\n",
-      "Generated text with prompt after epoch 1:\n",
-      "Prompt: What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\n",
-      "Response: What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\n",
+      "Generated text with prompt after epoch 100:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans? Let us know in the comments below!\n",
       "\n",
-      "I think Kamal would be a better president. I think that she'd be better.\n",
+      "Images via Flickr, Shutterstock, and Creative Commons.\n",
+      "\n",
+      "Generated text after epoch 200:\n",
+      "Bruno Massaro is an American singer and songwriter, and he is one of the most famous and influential artists of his generation. His solo work has made him one the biggest and most influential solo stars in pop music and the world.\n",
+      "\n",
+      "He is currently playing with his friend and fellow country singer, the band \"Sugar Shack\" at his house. He has sold over 20 million albums and is now one among the top 50 most popular acts in the United States.\n",
+      "\n",
+      "Generated text with prompt after epoch 200:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans?\n",
+      "\n",
+      "Share your comments below.\n",
       ".\n",
-      "Final Validation Perplexity: 19.44\n",
+      "\n",
+      "Generated text after epoch 300:\n",
+      "It was a great day for the Toronto Raptors, who had a 10-2 win over the Chicago Bulls in Game 3 of the Eastern Conference Semifinals.\n",
+      "\n",
+      "The Raptors scored the first two points of regulation in the opening frame before trailing by as many as 11 at the break. After a flurry of free throws, the Bulls were outscored by 9-3. But despite the play, Toronto made it 5-1. The Raptors went on to win 15-14 on\n",
+      "\n",
+      "Generated text with prompt after epoch 300:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans?\n",
+      "\n",
+      "I agree with many of you. Free healthcare is a good thing. I am not against it. But for the same reason that you would like to have free health care, it is not free.\n",
+      ":)\n",
+      "\n",
+      "Generated text after epoch 400:\n",
+      "TRAVEL OF THE MESSENGER\n",
+      "\n",
+      "If you have ever read the book of the MSS. I am the author. You are welcome to skip to the end and read. The entire book is here.\n",
+      "\n",
+      "\n",
+      "The only thing that is missing is a \"Journey to Mars\" book. It's a much bigger book, and I had a lot of fun doing it. If you want to know more about the mission, read on.\n",
+      "\n",
+      "Generated text with prompt after epoch 400:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans? Have you been affected by the Affordable Care Act? What can you do to make sure you stay safe?\n",
+      "\n",
+      "Generated text after epoch 500:\n",
+      "By\n",
+      "\n",
+      "As the world's oldest and most celebrated Catholic church, the Church of England, has been a powerful voice for LGBT rights. In the past, a group of prominent Catholic clergy, who were not members of the church at the time, have called for the repeal of sodomy laws.\n",
+      ", and have been outspoken about the right of Catholics to be married to other non-Catholics. The Church has also been vocal about how it would like to give same-sex couples\n",
+      "\n",
+      "Generated text with prompt after epoch 500:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans?\n",
+      "\n",
+      "The Affordable Care Act (ACA) is a win for the American people. It's a huge win and we want to win more of it. The ACA will be good for everybody. We've done a lot of work in the past to get it right.\n",
+      ": I do think it's good that people are getting sicker and healthier. I think that's bad. But the ACA's not going to be a miracle. And what we can do is figure out what happens. What we're doing is taking the right steps to keep people healthier, reduce the costs for insurance companies, and make sure they get their fair share of the health care that we need to ensure that everyone has health coverage. That is what this is all about, that is our mission.\n",
+      "\n",
+      "Generated text after epoch 600:\n",
+      "Fishermen in the Great Lakes region are scrambling to find the best water for their cattle, which is what they're looking for now.\n",
+      "\n",
+      "The Midwest-based company is hoping to open a new plant in Minnesota, but it's still a bit early in its development, according to Rick Hernández, president of the Lake Michigan Water Conservation District. That plant has yet to be built, though.\n",
+      "\n",
+      "\n",
+      "\"I don't think it'll be done until we have an\n",
+      "\n",
+      "Generated text with prompt after epoch 600:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans? What are the questions that need answering?\n",
+      "\n",
+      "Generated text after epoch 700:\n",
+      "In a new report, the Center for Democracy and Technology at Columbia University asked American companies and policymakers to help make sure their lobbying efforts against Obamacare are more aligned with what's happening in the Senate and House.\n",
+      "\n",
+      "\"While the public is increasingly confused about the health care law, there is no doubt that more Americans are using their voices and knowledge to stand up and defend the government's role in providing health insurance to millions of Americans,\" says the report. \"More Americans than ever believe that the\n",
+      "\n",
+      "Generated text with prompt after epoch 700:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans? Let us know in the comments section below!\n",
+      "\n",
+      "Generated text after epoch 800:\n",
+      "The first time it was ever claimed that a terrorist attack was perpetrated on Americans by the Obama administration, the attack on the US consulate in Benghazi, Libya, was a pretext for a \"surprise attack.\" It was the first terror attack in US history.\n",
+      "\n",
+      "A little more than a week later, on October 16, 2013, a gunman killed Ambassador Chris Stevens, three others and wounded four more. The perpetrators of that attack were all American citizens. It's a tragedy for the American\n",
+      "\n",
+      "Generated text with prompt after epoch 800:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans? Let us know your experiences in the comments section below.\n",
+      "\n",
+      "Photo Credit: Shutterstock.com\n",
+      "\n",
+      "Generated text after epoch 900:\n",
+      "On the morning of September 14, 1984, an 8-year-old girl was playing in a playground in her neighborhood. The mother of the child, who was not named, heard a loud crack and a bang. As she went down, she heard the sound of a woman, a 6-foot-7 tall woman dressed in black, screaming.\n",
+      "\n",
+      "Her mother, Mary E. Robinson, saw the screaming child and took her to a local hospital. There, the baby was\n",
+      "\n",
+      "Generated text with prompt after epoch 900:\n",
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans?\n",
+      "\n",
+      "Share your experiences.\n",
+      "Final Validation Perplexity: 15.28\n",
       "\n",
       "Final generated text:\n",
-      "- your mom has been a mother for over 20 years. - i'm not going to tell you why she's been so successful in this campaign.\n",
-      "she's had a tremendous support and she understands that. but if she gets a little bit of the support of other people, they will say, \"okay, don’t tell that to her. \" and they are going, you know, we‖ve got to get her support. i don´t know what that\n",
+      "’s not going to happen. i think we“re going through a very rough year. we have to do it.\n",
+      "we‖re not doing it anymore. so i just want to say that is a big day. it s a great day for all of us. everybody has to be treated fairly. and i want the press to see that i‣m the one that covers the issues. the media – the fake news – doesn—t do\n",
       "\n",
       "Final generated text with prompt:\n",
-      "Prompt: What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\n",
-      "Response: What are your thoughts on Kamala Harris running as president against you, do you think she'll win? i'd say yes. she's a really strong person, and i think we'll have a great relationship. i don't think i'll ever be able to do that. but she should be president. you know that, right? you should know it. this is what we're doing, we are running a campaign of opportunity, a team of people that believe in what the people are going to need for the future of america. we have to build on the tremendous success of our nation's success, which is going into obama's administration. and if you look at our country, you have the same people, the opposite sex, that are the best people i've ever met, i have them all, they are great people.\n",
-      "you have great leadership. they're great, very, extremely qualified people with very great things to say. a lot of things that we don’t have. the other thing i said is i want to go back to my days as a member\n"
+      "Prompt: What are your thoughts on free healthcare for all Americans?\n",
+      "Response: What are your thoughts on free healthcare for all Americans? i have a lot of respect for you, but i don't care what you think.\n",
+      "we will always protect patients with pre-existing conditions and ensure equal access to care for everyone. there will be no discrimination. we will defend religious liberty and the right to keep and bear arms. and we'll strike down terrorists who threaten our citizens and they threaten civil rights. i'll never do that. our second amendment is under siege. you know that, right? and nobody talks about it, because nobody cares. nobody even talks. [applause] we're going to defend the second and it's under assault. it really is. so if we had to go, you'd be talking about constitutional amendments. if you go to new hampshire, i think you might be going, \"what are these people going through?\" and this is a new, new world. they're all sitting there, they have no idea what they've done. \"oh, what's going on.\n"
      ]
     }
    ],
    "source": [
-    "prompt = \"What are your thoughts on Kamala Harris running as president against you, do you think she'll win?\"\n",
-    "\n",
-    "for epoch in range(save_epochs, total_epochs + 1, save_epochs):\n",
-    "    checkpoint_dir = f\"./results/checkpoint-epoch-{epoch-1}\"\n",
+    "prompt = \"What are your thoughts on free healthcare for all Americans?\"\n",
+    "interval = 100\n",
+    "for epoch in range(interval, total_epochs + 1, interval):\n",
+    "    checkpoint_dir = f\"./results/checkpoint-epoch-{epoch}\"\n",
     "    if os.path.exists(checkpoint_dir):\n",
     "        loaded_model = GPT2LMHeadModel.from_pretrained(checkpoint_dir)\n",
     "        loaded_model = get_peft_model(loaded_model, peft_config)\n",
@@ -457,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "d519b847-df0a-4bb2-a44d-eefb7d32d4b3",
    "metadata": {},
    "outputs": [
